Refactor main application structure and enhance breath-hold timer functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bearth_timer
-description: "A new Flutter project."
+description: "Customizable breath-hold timer for freediving & breathwork."
 publish_to: 'none'
 version: 0.1.0
 
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
