--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ dependencies:
   flutter:
     sdk: flutter
   shared_preferences: ^2.2.2
+  fl_chart: ^0.66.0
+  intl: ^0.19.0
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
