--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: bearth_timer
 description: "Customizable breath-hold timer for freediving & breathwork."
 publish_to: 'none'
-version: 0.9.0
+version: 0.10.0
 
 environment:
   sdk: ^3.7.2
@@ -21,6 +21,7 @@ dependencies:
   flutter_soloud: ^3.2.1
   path_provider: ^2.1.1
   uuid: ^4.2.1
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
