--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,21 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
   hive_generator: ^2.0.1
   build_runner: ^2.4.7
+  slang: ^3.31.0
+  slang_flutter: ^3.31.0
 
+slang:
+  base_locale: en
+  fallback_strategy: base_locale
+  input_directory: lib/i18n
+  input_file_pattern: .i18n.json
+  output_directory: lib/i18n
+  output_file_name: translations.g.dart
+  output_format: single_file
+  namespaces: false
+  translate_var: t
+  enum_name: AppLocale
+  class_name: Translations
 
 flutter_launcher_icons:
   android: "launcher_icon"
