--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   fl_chart: ^1.0.0
-  intl: ^0.19.0
+  intl: ^0.20.2
   cupertino_icons: ^1.0.2
   wakelock_plus: ^1.2.1
   supabase_flutter: ^2.9.1
@@ -59,6 +61,7 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  generate: true
   assets:
     - assets/icon.png
     - assets/sounds/clap1.wav
