--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ slang:
   base_locale: en
   fallback_strategy: base_locale
   input_directory: lib/i18n
-  input_file_pattern: .i18n.json
+  input_file_pattern: "{locale}.json"
   output_directory: lib/i18n
   output_file_name: translations.g.dart
   output_format: single_file
